--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,6 +89,12 @@
 <!--                android:layout_marginBottom="25dp"/>-->
 
 
+            <Button
+                android:id="@+id/saveButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:text="@string/save_btn_text" />
 
             <Button
                 android:id="@+id/connectButton"
