--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,20 +90,24 @@
 <!--                android:inputType="number"-->
 <!--                android:layout_marginBottom="25dp"/>-->
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
 
+            android:layout_marginTop="30dp"
+            android:orientation="horizontal">
             <Button
                 android:id="@+id/saveButton"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginTop="5dp"
                 android:text="@string/save_btn_text" />
 
             <Button
                 android:id="@+id/connectButton"
-                android:layout_width="match_parent"
+                android:layout_width="252dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
                 android:text="@string/connect_btn_text" />
+        </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -120,7 +124,6 @@
 
                     android:text="@string/disconnect_btn_text"
                     android:textColorLink="#673AB7" />
-
 
                 <Button
                     android:id="@+id/testNotifButton"
